<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <TextView 
        android:id="@+id/tvDnD"
        android:text="@string/dnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />
   
    <TextView
        android:id="@+id/tvPP"
        android:text="@string/pp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center" />
    
    <TextView
        android:id="@+id/tvContact"
        android:text="@string/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center" />
    
    <TextView
        android:id="@+id/tvGM"
        android:text="@string/gm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:gravity="center" />
    

</LinearLayout>